# mdk-braw

./: .gitignore  BRawAPILoader.cpp  BRawD3D11Interop.cpp  BRawD3D11Interop.h  BRawGLInterop.cpp  BRawGLInterop.h  BRawMTLInterop.h  BRawMTLInterop.mm  BRawReader.cpp  BRawVideoBufferPool.cpp  BRawVideoBufferPool.h  BStr.h  BlackmagicRawAPI.h  CMakeLists.txt  ComPtr.h  LICENSE  README.md  Variant.cpp  Variant.h  cfptr.h
.github/workflows/: main.yml
base/: Hash.h
cmake/: FindMDK.cmake
sdk/Frameworks/BlackmagicRawAPI.framework/: BlackmagicRawAPI.tbd
sdk/Frameworks/DecoderMetal.framework/: DecoderMetal.tbd
